--- a/index.html
+++ b/index.html
@@ -7,12 +7,31 @@
     <title>Xylim</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="cssp/index.css">
-     
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Xylim</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Quem somos.html">Sobre</a>
+                </li>
+            </ul>
+            <div class="con">
+                <input type="text" name="ipt" id="idpt" placeholder="Pesquisar preços..." />
+                <div class="cc"><img src="img/lupa.png" alt="img" width="25px" height="25px"> </div>
+                <div class="cc"><a href="loja.html" target="_self"><img src="img/shopping-bag.png" alt="img" width="25px" height="25px"></a></div>
+             </div>
+            </div>
+        </div>
+    </nav>
     <header class="pri">
-        <div class="corpo">
+        <!--<div class="corpo">
             <div class="imag">
                 <a href="index.html" target="_self"><img src="img/IMG-20230103-WA0012.jpg" alt="img" width="200px" height="200px"></a>
             </div>
@@ -27,7 +46,7 @@
                <input type="text" name="ipt" id="idpt" placeholder="Pesquisar preços..." />
                <div class="cc"><img src="img/lupa.png" alt="img" width="25px" height="25px"> </div>
                <div class="cc"><a href="loja.html" target="_self"><img src="img/shopping-bag.png" alt="img" width="25px" height="25px"></a></div>
-            </div>
+            </div>-->
             <div class="cont">
                     <marquee behavior="" direction="">Roupas com qualidade apartir de 5000kzs</marquee>         
             </div>
@@ -146,6 +165,6 @@
            </div>
         </div>
     </footer>
-
+  <script src="jv.js"></script>
 </body>
 </html>
