--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="con">
                 <input type="text" name="ipt" id="idpt" placeholder="Pesquisar preços..." />
                 <div class="cc"><img src="img/lupa.png" alt="img" width="25px" height="25px"> </div>
-                <div class="cc"><a href="loja.html" target="_self"><img src="img/shopping-bag.png" alt="img" width="25px" height="25px"></a></div>
+                <div class="cc"><a href="testeb.html" target="_self"><img src="img/shopping-bag.png" alt="img" width="25px" height="25px"></a></div>
              </div>
             </div>
         </div>
