--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="ctx">
                <h2>Bem-vindo a Xyliam</h2>
                <p id="xt">Sinta-se confortavel,mantenha seu estilo seja feliz<br>usando Xylim aonde quer que vais:Tudo isso apartir de 5000kzs</p>
-               <a href="loja.html" target="_self"><div class="divbtn"> Acesse os produtos Xylim <img src="img/shopping-bag.png" alt="img" width="20px" height="20px"></div></a>
+               <a href="testeb.html" target="_self"><div class="divbtn"> Acesse os produtos Xylim <img src="img/shopping-bag.png" alt="img" width="20px" height="20px"></div></a>
             </div>
             <div class="dim">
                 <img src="img/InShot.jpg" alt="img" width="600px" height="600px">
